# crete-dev

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  user_manual.md
back-end/: CMakeLists.txt
back-end/klee/: CMakeLists.txt  Makefile.common  crete_make_klee.sh
back-end/klee/include/crete-replayer/: debug.h  qemu_macros.h  qemu_rt_info.h
back-end/klee/include/klee/: ExecutionState.h  Interpreter.h
back-end/klee/include/klee/util/: Assignment.h
back-end/klee/lib/: Makefile
back-end/klee/lib/Basic/: KTest.cpp
back-end/klee/lib/Core/: AddressSpace.cpp  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorUtil.cpp  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h
back-end/klee/lib/crete-replayer/: Makefile  debug.cpp  qemu_rt_info.cpp
back-end/klee/tools/: Makefile
back-end/klee/tools/klee/: Makefile  main.cpp
back-end/llvm-translator/: CMakeLists.txt
back-end/llvm-translator/llvm-translator-qemu-2.3/: .gitignore  Makefile  Makefile.objs  Makefile.target  configure  crete_configure.sh  crete_gen_links.sh  make_op_helper_bc.sh
back-end/llvm-translator/llvm-translator-qemu-2.3/qemu-include/: cpu-all.h  cpu-defs.h  exec-all.h  qemu-common.h  softmmu_header.h
back-end/llvm-translator/llvm-translator-qemu-2.3/tcg/: i386-tcg-target.h  optimize.c  tcg-llvm.cpp  tcg-llvm.h  tcg-op.h  tcg-opc.h  tcg.c  tcg.h
back-end/llvm-translator/llvm-translator-qemu-2.3/tcg-llvm-offline/: bc_crete_ops.c  bc_crete_ops_lli.cpp  bc_helpers_globals.c  tcg-llvm-offline.cpp  tcg-llvm-offline.h
back-end/llvm-translator/llvm-translator-qemu-2.3/tcg-llvm-offline/op_helpers/: bc_target_i386_helpers.bc  bc_target_x86_64_helpers.bc
back-end/llvm-translator/llvm-translator-qemu-2.3/tcg/i386/: tcg-target.c  tcg-target.h
back-end/llvm-translator/llvm-translator-qemu-2.3/tcg/tci/: tcg-target.c
back-end/manager/: CMakeLists.txt
back-end/manager/dispatch/: CMakeLists.txt  common.h  coverage.cpp  coverage.h  dispatch_ui.cpp  dispatch_ui.h
back-end/manager/svm-node/: CMakeLists.txt  node_svm.cpp  node_svm.h
back-end/manager/vm-node/: CMakeLists.txt  node_vm.cpp  node_vm.h
debian-package/guest/lib/: CMakeLists.txt
debian-package/guest/lib/asio/: CMakeLists.txt
debian-package/guest/lib/asio/client/: client.cpp  client_pimpl.cpp
debian-package/guest/lib/asio/server/: server.cpp
debian-package/guest/lib/boost/: README
debian-package/guest/lib/elf-reader/: elf_reader.cpp
debian-package/guest/lib/harness/: harness.h
debian-package/guest/lib/hook/: CMakeLists.txt  hook.c  utility.c
debian-package/guest/lib/hook/klee/: fd.h
debian-package/guest/lib/hook/test/: crete_hook.test  posix.cpp  std.cpp  suite.cpp
debian-package/guest/lib/include/crete/: custom_instr.h  custom_opcode.h  debug_flags.h  exception.h  guest-defs.h  harness.h  harness_config.h  process.h  run_config.h  test_case.h
debian-package/guest/lib/preload/: CMakeLists.txt  argv_processor.cpp  argv_processor.h
debian-package/guest/lib/proc-reader/: CMakeLists.txt
debian-package/guest/lib/replay-preload/: CMakeLists.txt  replay-preload.cpp
debian-package/guest/lib/test-case/: test_case.cpp
debian-package/guest/lib/vm-comm/: custom_instr.c
front-end/guest/: CMakeLists.txt  CRETE-VERSION  scripts
front-end/guest/evals/: CMakeLists.txt  build-evals.sh
front-end/guest/kernel-modules/crete-intrinsics-tracing/: Makefile  crete-intrinsics-tracing.c
front-end/guest/kernel-modules/crete-intrinsics-tracing/include/: crete
front-end/guest/kernel-modules/kprobe_e1000/: Makefile  crete_kprobe_e1000.c
front-end/guest/kernel-modules/kprobe_kernel_api/: Makefile  crete_kprobe_kernel_api.c
front-end/guest/lib/: CMakeLists.txt  asio  elf-reader  proc-reader  replay-preload  test-case
front-end/guest/lib/boost/: CMakeLists.txt
front-end/guest/lib/harness/: CMakeLists.txt  harness.cpp  harness.h
front-end/guest/lib/hook/klee/: fd.c  fd_32.c  fd_64.c
front-end/guest/lib/hook/test/: Makefile  README  hook-test.files  run.sh
front-end/guest/lib/include/: boost  external
front-end/guest/lib/include/crete/: asio  common.h  custom_instr.h  custom_opcode.h  (+15 more)
front-end/guest/lib/preload/: preload.cpp  preload.h
front-end/guest/lib/run-preload/: CMakeLists.txt  run_preload.cpp
front-end/guest/lib/vm-comm/: CMakeLists.txt  custom_instr.c
front-end/guest/sandbox/: crete_chroot_env.sh  crete_chroot_env_coreutils.sh  klee-sandbox.tgz
front-end/guest/sandbox/env/: klee-test.env
front-end/guest/util/: CMakeLists.txt  tc-replay
front-end/guest/util/quitvm/: quitvm.cpp
front-end/guest/util/run/: CMakeLists.txt  main.cpp  runner.cpp  runner.h
lib/cluster/: CMakeLists.txt  common.cpp  dispatch.cpp  node.cpp  node_options.cpp  node_registrar.cpp  node_registrar_fsm.cpp  node_registrar_fsm.h  svm_node.cpp  svm_node_fsm.cpp  svm_node_options.cpp  test_pool.cpp  trace_pool.cpp  vm_node.cpp  vm_node_fsm.cpp  vm_node_options.cpp
lib/cluster/model/: dispatch_fsm.qmodel
lib/cluster/test/: Makefile  README  cluster-test.files  cluster-test.includes  run.sh  suite.cpp
lib/logger/: CMakeLists.txt  log_stream.cpp  logger.cpp  logger_attr.cpp  logger_attr_impl.cpp  logger_attr_impl.h  logger_impl.cpp  logger_impl.h
lib/replay-preload/: CMakeLists.txt  replay-preload.cpp
lib/trace-analyzer/: CMakeLists.txt  action.h  breadth_first_search.hpp  reward.h  selector.cpp  smart_selector.h  state.h  trace_analyzer.cpp  trace_graph.cpp
lib/trace-analyzer/test/: Makefile  run.sh  suite.cpp  trace-analyzer-test.includes
misc/util/: CMakeLists.txt
misc/util/config-generator/: CMakeLists.txt  config-generator.cpp  config-generator.h
misc/util/debug/: CMakeLists.txt  asm_mode.cpp  asm_mode.h  compare-test.cpp  compare-test.h  debug.cpp  debug.h
misc/util/klee-tc-replay/: CMakeLists.txt  klee-replay.cpp  klee-replay.h
misc/util/memcheck/: CMakeLists.txt  memcheck.cpp  memcheck.h
misc/util/tc-compare/: CMakeLists.txt  tc-compare.cpp  tc-compare.hpp
misc/util/tc-replay/: CMakeLists.txt  replay.cpp  replay.h
(+1758 files in other folders)
